[package]
name = "synaptic-mesh"
edition = "2024"
license = "GPL-3.0-or-later"
description = "An SNN based mesh for managing the wiring, topology, and temporal delays between neurons."
repository = "https://github.com/Limen-Neural/synaptic-mesh"
keywords = ["snn", "neuromorphic", "routing", "lif", "spikenaut"]
categories = ["science", "algorithms", "text-processing"]
exclude = ["docs/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace]
